--- a/app/src/main/res/navigation/navigationgraph.xml
+++ b/app/src/main/res/navigation/navigationgraph.xml
@@ -1,5 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/navigationgraph">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/navigationgraph"
+    app:startDestination="@id/first">
 
+    <fragment
+        android:id="@+id/first"
+        android:name="com.example.myfirstproject.First"
+        android:label="fragment_first"
+        tools:layout="@layout/fragment_first" />
+    <fragment
+        android:id="@+id/second"
+        android:name="com.example.myfirstproject.second"
+        android:label="fragment_second"
+        tools:layout="@layout/fragment_second" />
 </navigation>
